[package]
name = "blogger"
version = "1.0.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
rocket = "0.5.1"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_mysql"]
[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["macros", "migrate"]
